Added accomplishments field

--- a/sandbox.html
+++ b/sandbox.html
@@ -6,6 +6,10 @@
     <title>Sandbox</title>
 </head>
 <body>
-    <form action="./sandbox_results.html" method="get"></form>
+   
+    <form action="./sandbox_results.html" method="get" id="form1">
+       <input type="datetime" name="rightnow" id="current"> 
+    </form>
+    <script src="sandbox.js"></script>
 </body>
 </html>
